--- a/app/globals.css
+++ b/app/globals.css
@@ -33,6 +33,10 @@ h1, h2, h3, h4, h5, h6 {
   font-weight: bolder;
 }
 
+#top {
+  align-items: center;
+}
+
 h1 {
   font-size: 4em;
   margin: 0.2em 0;
