--- a/app/globals.css
+++ b/app/globals.css
@@ -24,8 +24,11 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
   scroll-behavior: smooth;
-  background-image: linear-gradient(to bottom right, #721e1e, #230909);
-  color: #FFFFFF;
+  /* old background: black/red gradient */
+  /* background-image: linear-gradient(to bottom right, #721e1e, #230909);  */
+  background-color: #500a0a;
+  background-image: url(../public/decal.png);
+  color: #000000;
   text-align:center;
 }
 
@@ -44,7 +47,8 @@ h1 {
 
 h2 {
   font-size: 3em;
-  margin: .2em 0;
+  /* margin: .2em 0; */
+  margin: 0;
 }
 
 .navbar {
