--- a/app/globals.css
+++ b/app/globals.css
@@ -21,7 +21,7 @@ html {
   background-image: url(../public/decal.png);
   /* font-family: Arial, Helvetica, sans-serif; */
   text-align: center;
-  color: #000;
+  color: var(--background);
   scroll-behavior: smooth;
   background-attachment: fixed;
   background-position: center center;
@@ -35,6 +35,11 @@ font-weight: 400;
 
 h1, h2, h3, h4, h5, h6 {
   font-weight: bold;
+}
+
+a {
+  color: lightblue;
+  text-decoration: underline;
 }
 
 /* ----------------------------------------
