changed one thing but i want to be done for today.

--- a/app/blog/blogstyle.css
+++ b/app/blog/blogstyle.css
@@ -1,7 +1,7 @@
 html {
     background-image: url("../../public/blog-bg.png");
     /* custom font things */
-    font-family: "Inter", monospace;
+    font-family: monospace;
     font-style: normal;
     font-weight: 400;
     color: white;
